Video Section Completed

--- a/index.html
+++ b/index.html
@@ -49,6 +49,35 @@
           <section class="videos-container">
                <h2 class="video-title">Online Games <span class="letter-2">Funny Videos</span></h2>
                <p class="video-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+               <div class="video-card-container">
+                  <div class="video-card">
+                    <div class="video-img-container">
+                        <img class="video-img" src="./images/rectangle 4.png" alt="">
+                    </div>
+                    <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+                  </div>
+
+                  <div class="video-card">
+                    <div class="video-img-container">
+                        <img class="video-img" src="./images/rectangle 5.png" alt="">
+                    </div>
+                    <p class="card-description">Did you score? #unblockedgames #school</p>
+                  </div>
+
+                  <div class="video-card">
+                    <div class="video-img-container">
+                        <img class="video-img" src="./images/rectangle 7.png" alt="">
+                    </div>
+                    <p class="card-description">Breaking game records like OG</p>
+                  </div>
+
+                  <div class="video-card">
+                    <div class="video-img-container">
+                        <img class="video-img" src="./images/rectangle 6.png" alt="">
+                    </div>
+                    <p class="card-description">Busted gaming on school laptop, but you are still lit.</p>
+                  </div>
+               </div>
           </section>
      </main>
      <footer>
