Gamer Section Completed

--- a/index.html
+++ b/index.html
@@ -37,15 +37,30 @@
                  <p class="banner-description">1-Click instant play</p>
                  <p class="banner-description">No Download</p>
                  <p class="banner-description">1000s of supported online games</p>
-                 <button class="sign-in">Sign In</button> <button class="rouge">Go Rogue</button>
+                 <button class="primary-btn">Sign In</button> <button class="rouge">Go Rogue</button>
             </div>
 
             <div class="banner-img-container">
                  <img class="banner-img" src="./images/group 18.png" alt="">
             </div>
           </section>
+          <!-- Gamer Section -->
+          <section class="gamer-container">
+            <div class="gamer-img-container">
+                <img src="./images/pngwing 4.png" alt="">
+            </div>
+
+            <div class="gamer-content">
+                <h2 class="gamer-title">We are gamer</h2>
+                <p class="gamer-description">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <button class="primary-btn">know more</button><br>
+                <p class="gamer-description-2">Our purpose...</p>
+                <h3 class="gamer-title-2">“unleash the gamer in everyone”</h3>
+            </div>
+      </section>
      </header>
      <main>
+          <!-- Video Section -->
           <section class="videos-container">
                <h2 class="video-title">Online Games <span class="letter-2">Funny Videos</span></h2>
                <p class="video-description">A Collection of Hilarious Videos to Brighten Your Day</p>
