Footer Section Completed

--- a/index.html
+++ b/index.html
@@ -94,9 +94,113 @@
                   </div>
                </div>
           </section>
+          <!-- Play Section -->
+          <section class="play-container">
+            <div class="play-content">
+                <h2 class="play-title"><span class="play-word">Play Instantly,</span> <br> No Downloads <br> No Installs.</h2>
+                <p class="play-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+            </div>
+
+            <div class="play-img-container">
+                 <img src="./images/rectangle 55.png" alt="">
+                 <div class="play-side-img">
+                  <img src="./images/rectangle 66.png" alt="">
+                 </div>
+            </div>
+          </section>
+          <!-- Games Section -->
+          <section class="games-container">
+            <button class="games-btn">
+              <div class="games-content">
+                <img src="./images/rectangle 11.png" alt="">
+                <h5 class="games-title">Action Games</h5>
+              </div>
+            </button>
+
+            <button class="games-btn">
+              <div class="games-content">
+                <img src="./images/rectangle 12.png" alt="">
+                <h5 class="games-title">Adventure Games</h5>
+              </div>
+            </button>
+
+            <button class="games-btn">
+              <div class="games-content">
+                <img src="./images/rectangle 13.png" alt="">
+                <h5 class="games-title">Arcade Games</h5>
+              </div>
+            </button>
+
+            <button class="games-btn">
+              <div class="games-content">
+                <img src="./images/rectangle 14.png" alt="">
+                <h5 class="games-title">Educational Games</h5>
+              </div>
+            </button>
+
+            <button class="games-btn">
+              <div class="games-content">
+                <img src="./images/rectangle 15.png" alt="">
+                <h5 class="games-title">Word Games</h5>
+              </div>
+            </button>
+
+            <button class="games-btn">
+              <div class="games-content">
+                <img src="./images/rectangle 16.png" alt="">
+                <h5 class="games-title">Role Palying Games</h5>
+              </div>
+            </button>
+
+            <button class="games-btn">
+              <div class="games-content">
+                <img src="./images/rectangle 17.png" alt="">
+                <h5 class="games-title">Music & Audio Games</h5>
+              </div>
+            </button>
+
+            <button class="games-btn">
+              <div class="games-content">
+                <img src="./images/rectangle 18.png" alt="">
+                <h5 class="games-title">Puzzle Games</h5>
+              </div>
+            </button>
+
+            <button class="games-btn">
+              <div class="games-content">
+                <img src="./images/rectangle 19.png" alt="">
+                <h5 class="games-title">Strategy Games</h5>
+              </div>
+            </button>
+          </section>
      </main>
      <footer>
-
+         <section class="footer-container">
+          <div class="footer-logo">
+            <img src="./images/frame.png" alt="">
+            <h3 class="footer-logo-title"><span class="letter">G</span>amer</h3>
+          </div>
+          <ul class="links">
+            <li class="footer-link"><a href="">Our Story</a></li>
+            <li class="footer-link"><a href="">Games</a></li>
+            <li class="footer-link"><a href="">Web Games</a></li>
+            <li class="footer-link"><a href="">Careers</a></li>
+            <li class="footer-link"><a href="">Support</a></li>
+            <li class="footer-link"><a href="">My Account</a></li>
+          </ul>
+          <div class="social-link-container">
+             <button class="social-link"><img src="./icon/twitter 1.svg" alt=""></button>
+             <button class="social-link"><img src="./icon/youtube-2.svg" alt=""></button>
+             <button class="social-link"><img src="./icon/instagram 1.svg" alt=""></button>
+          </div>
+          <ul class="last-description">
+            <li class="footer-description">Terms and Conditions</li>
+            <li class="footer-description">Privacy Policy</li>
+            <li class="footer-description">Cookie Policy</li>
+            <li class="footer-description">Privacy Settings</li>
+          </ul>
+          <p class="footer-info">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+         </section>
      </footer>
 </body>
 </html>
